--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ Django==5.1.3
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
 django-debug-toolbar==4.4.6
+celery[redis]==5.4.0
+celery-singleton==0.3.1
 Pillow
