gradual completion of the backend

--- a/Application/back-end/Dockerfile
+++ b/Application/back-end/Dockerfile
@@ -1,10 +1,9 @@
 FROM python:3.10-alpine3.16
 
 COPY requirements.txt /temp/requirements.txt
-COPY Application /Application
+COPY . /Application/back-end
 
 WORKDIR /Application/back-end
-EXPOSE 8000
 
 RUN pip install -r /temp/requirements.txt
 
