--- a/Application/nginx/nginx.conf
+++ b/Application/nginx/nginx.conf
@@ -2,21 +2,40 @@ upstream backend {
     server back-end:8000;
 }
 
+upstream frontend {
+    server front-end:5173;
+}
+
 
 server {
     listen 80;
+    listen [::]:80;
 
-    location ~ (/admin/|/accounts/|/api/) {
+    server_name localhost;
+
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+
+    location ~ (^/admin/|^/accounts/|^/api/) {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
-    location ^~ /static/ {
+    location ^~ /staticfiles/ {
         alias static/;
     }
     location ^~ /media/ {
         alias media/;
+    }
+
+    location / {
+        proxy_pass http://frontend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 }
