update nginx + back-end + i18n + refactor all index.ts

--- a/Application/front-end/Dockerfile
+++ b/Application/front-end/Dockerfile
@@ -1,9 +1,12 @@
 FROM node:22-alpine
 
+COPY package.json package.json
+RUN yarn
+RUN yarn global add vite
+
 COPY . /Application/front-end
 WORKDIR /Application/front-end
 
-RUN yarn install --save-optional
 RUN yarn run build
 
 #RUN adduser -h . --disabled-password frontend-user
