--- a/Application/back-end/requirements.txt
+++ b/Application/back-end/requirements.txt
@@ -1,11 +1,13 @@
 gunicorn==23.0.0
-Django==5.1.3
-djangorestframework==3.15.2
-django-cors-headers==4.6.0
-django-debug-toolbar==4.4.6
+Django==5.1.7
+djangorestframework==3.16.0
+django-cors-headers==4.7.0
+django-debug-toolbar==5.1.0
 celery[redis]==5.4.0
 celery-singleton==0.3.1
-django-allauth[socialaccount]==65.2.0
-dj-rest-auth[with_social]==7.0.0
+django-allauth[socialaccount]==65.6.0
+dj-rest-auth[with_social]==7.0.1
+psycopg2==2.9.10
 Pillow
 requests
+dotenv
