--- a/Application/front-end/.hintrc
+++ b/Application/front-end/.hintrc
@@ -3,6 +3,12 @@
     "development"
   ],
   "hints": {
+    "axe/structure": [
+      "default",
+      {
+        "listitem": "off"
+      }
+    ],
     "no-inline-styles": "off"
   }
 }
