--- a/Application/front-end/package.json
+++ b/Application/front-end/package.json
@@ -14,6 +14,7 @@
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
+    "luxon": "^3.5.0",
     "motion": "^11.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,18 +30,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/react-speech-recognition": "^3.9.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "dpdm": "^3.14.0",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "vite": "^6.0.1",
-    "vite-bundle-analyzer": "^0.18.0"
+    "vite-bundle-visualizer": "^1.2.1"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*",
