--- a/Application/nginx/nginx.conf
+++ b/Application/nginx/nginx.conf
@@ -1,43 +1,64 @@
-upstream backend {
-    server back-end:8000;
+worker_processes  1;
+
+#error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
+
+#pid        logs/nginx.pid;
+
+
+events {
+    worker_connections  1024;
 }
 
-upstream frontend {
-    server front-end:5173;
-}
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
+    add_header "Access-Control-Allow-Origin" "http://rvideo.pro";
 
-server {
-    listen 80;
-    listen [::]:80;
-
-    client_max_body_size 30G;
-
-    server_name localhost;
-
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-
-    location ~ (^/admin/|^/accounts/|^/api/) {
-        proxy_pass http://backend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+    upstream backend {
+        server back-end:8000;
     }
 
-    location ^~ /staticfiles/ {
-        alias static/;
-    }
-    location ^~ /media/ {
-        alias media/;
+    upstream frontend {
+        server front-end:5173;
     }
 
-    location / {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+    server {
+        listen 80;
+        listen [::]:80;
+        listen 443;
+        listen [::]:443;
+
+        client_max_body_size 30G;
+
+        server_name rvideo.pro;
+
+        gzip on;
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 6;
+
+        location ~ (^/admin/|^/accounts/|^/api/) {
+            proxy_pass http://backend;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+
+        location ^~ /staticfiles/ {
+            alias static/;
+        }
+        location ^~ /media/ {
+            alias media/;
+        }
+
+        location / {
+            proxy_pass http://frontend;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
     }
 }
