--- a/Application/nginx/nginx.conf
+++ b/Application/nginx/nginx.conf
@@ -1,3 +1,6 @@
+load_module modules/ngx_http_brotli_filter_module.so;
+load_module modules/ngx_http_brotli_static_module.so;
+
 worker_processes  1;
 
 #error_log  logs/error.log;
@@ -15,50 +18,39 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    add_header "Access-Control-Allow-Origin" "http://rvideo.pro";
+    types_hash_max_size 2048;
 
-    upstream backend {
-        server back-end:8000;
-    }
+    sendfile                    on;
+    sendfile_max_chunk          2m;
+    tcp_nopush                  on;
+    tcp_nodelay                 on;
+    keepalive_timeout           65;
 
-    upstream frontend {
-        server front-end:5173;
-    }
+    gzip                        on;
+    gzip_vary                   on;
+    gzip_proxied                any;
+    gzip_comp_level             6;
 
-    server {
-        listen 80;
-        listen [::]:80;
-        listen 443;
-        listen [::]:443;
+    brotli                      on;
+    brotli_static               on;
+    brotli_comp_level           5;
 
-        client_max_body_size 30G;
+    proxy_ssl_server_name       off;
+    proxy_ssl_session_reuse     on;
 
-        server_name rvideo.pro;
+    ssl_prefer_server_ciphers   on;
+    ssl_protocols               TLSv1.2 TLSv1.3;
 
-        gzip on;
-        gzip_vary on;
-        gzip_proxied any;
-        gzip_comp_level 6;
+    ssl_session_cache           shared:SSL:10m;
+    ssl_session_tickets         on;
+    ssl_session_timeout         24h;
 
-        location ~ (^/admin/|^/accounts/|^/api/) {
-            proxy_pass http://backend;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
+    ssl_dhparam /usr/local/nginx/dhparam.pem;
 
-        location ^~ /staticfiles/ {
-            alias static/;
-        }
-        location ^~ /media/ {
-            alias media/;
-        }
+    ssl_early_data on;
 
-        location / {
-            proxy_pass http://frontend;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-    }
+    ssl_buffer_size             16k;
+    http2_chunk_size            8k;
+
+    include /usr/local/nginx/sites/*;
 }
