--- a/Application/front-end/package.json
+++ b/Application/front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "auto-bind": "^5.0.1",
     "axios": "^1.7.9",
     "dashjs": "^5.0.0",
     "i18next": "^24.2.3",
